--- a/notes/notes.bib
+++ b/notes/notes.bib
@@ -506,4 +506,53 @@ url={http://csrc.nist.gov/nissc/1997}
     organization={Springer}
 }
 
+@article{QQAttack,
+  author    = {Jeffrey Knockel and
+               Thomas Ristenpart and
+               Jedidiah R. Crandall},
+  title     = {When Textbook {RSA} is Used to Protect the Privacy of Hundreds of
+               Millions of Users},
+  journal   = {CoRR},
+  volume    = {abs/1802.03367},
+  year      = {2018},
+  url       = {http://arxiv.org/abs/1802.03367},
+  archivePrefix = {arXiv},
+  eprint    = {1802.03367},
+  timestamp = {Mon, 13 Aug 2018 16:47:47 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1802-03367},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{BleichRSA,
+ author = {Bleichenbacher, Daniel},
+ title = {Chosen Ciphertext Attacks Against Protocols Based on the RSA Encryption Standard PKCS \#1},
+ booktitle = {Proceedings of the 18th Annual International Cryptology Conference on Advances in Cryptology},
+ series = {CRYPTO '98},
+ year = {1998},
+ isbn = {3-540-64892-5},
+ pages = {1--12},
+ numpages = {12},
+ url = {http://dl.acm.org/citation.cfm?id=646763.706320},
+ acmid = {706320},
+ publisher = {Springer-Verlag},
+ address = {London, UK, UK},
+}
+
+@article{icdh,
+  title={The Twin Diffie-Hellman Problem and Applications},
+  author={Cash, David and Kiltz, Eike and Shoup, Victor},
+  journal={Journal of cryptology},
+  volume={22},
+  number={4},
+  pages={470--504},
+  year={2009},
+  publisher={Springer}
+}
+
+@article{oaep,
+  title={Optimal Asymmetric Encryption How to Encrypt with RSA},
+  author={Bellare, Mihir and Rogawayy, Phillip},
+  year={1995}
+}
+
 
